change the time of initialing calendar

--- a/app/src/main/res/layout/activity.xml
+++ b/app/src/main/res/layout/activity.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <work.nich.calendarview.MonthView
+        android:id="@+id/view_month"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
