support instantiate from code

--- a/app/src/main/res/layout/activity.xml
+++ b/app/src/main/res/layout/activity.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <work.nich.calendarview.MonthView
-        android:id="@+id/view_month"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/tv_month"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:day_height="35dp"
-        app:day_radius="16dp"
-        app:day_textSize="12sp" />
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:textColor="@color/nc_default_weekday_text_color"
+        android:textSize="18sp"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
