--- a/app/src/main/res/layout/activity.xml
+++ b/app/src/main/res/layout/activity.xml
@@ -4,18 +4,10 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_month"
+    <work.nich.view.MonthView
+        android:id="@+id/view_month"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:gravity="center"
-        android:textColor="@color/nc_default_weekday_text_color"
-        android:textSize="18sp"/>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"/>
+        android:layout_height="wrap_content"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -38,6 +30,12 @@
                 android:layout_height="wrap_content"
                 android:onClick="changeStyle"
                 android:text="change selected style"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="getSelectedDays"
+                android:text="get selected days"/>
 
             <Button
                 android:layout_width="wrap_content"
