--- a/app/src/main/res/layout/activity.xml
+++ b/app/src/main/res/layout/activity.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:padding="8dp"
               android:orientation="vertical">
 
     <work.nich.view.MonthView
@@ -10,6 +11,7 @@
         android:layout_height="wrap_content"/>
 
     <ScrollView
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -40,8 +42,14 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="getSelectedDays"
-                android:text="get selected days"/>
+                android:onClick="switchCalendar"
+                android:text="switch to built in calendar"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="switchFirstDay"
+                android:text="set monday as the first day"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
